spade-tests/src/snapshots/spade_tests__hir_lowering__tests__absolute_referring_to_unavailable_variable_causes_error.snap
---
source: spade-tests/src/hir_lowering.rs
---
pipeline(5) X(clk: clock) -> bool {reg*5; false}

pipeline(6) main(clk: clock, x: bool) -> bool {
        let x = inst(5) X(clk);
    reg*4;
        'here
    reg;
        let res = stage(here).x;
    reg;
        res
}


error: Use of x before it is ready
  ┌─ testinput:8:31
  │
4 │         let x = inst(5) X(clk);
  │             - x is originally defined here at stage 0
  ·
8 │         let res = stage(here).x;
  │                   ----------- ^ x is unavailable at stage 4
  │                   │            
  │                   This refers to stage 4
  │
  = note: Since x is defined at stage 0 with latency 5, it cannot be accessed before stage 5
