spade-tests/src/snapshots/spade_tests__hir_lowering__tests__incorrect_stage_count.snap
---
source: spade-tests/src/hir_lowering.rs
---
pipeline(3) pipe(clk: clock) -> bool {
    reg;
    reg;
        true
}


error: Pipeline depth mismatch. Expected 3 got 2
  ┌─ testinput:1:38
  │  
1 │   pipeline(3) pipe(clk: clock) -> bool {
  │            - Type 3 inferred here
  │ ╭──────────────────────────────────────^
2 │ │     reg;
3 │ │     reg;
4 │ │         true
5 │ │ }
  │ ╰─^ Found 2 stages in this pipeline
  │  
  = note: Expected: 2
               Got: 3
