spade-tests/src/snapshots/spade_tests__hir_lowering__tests__incorrect_stage_count_only_one.snap
---
source: spade-tests/src/hir_lowering.rs
---
pipeline(2) pipe(clk: clock) -> bool {
    reg;
        true
}


error: Pipeline depth mismatch. Expected 2 got 1
  ┌─ testinput:1:38
  │  
1 │   pipeline(2) pipe(clk: clock) -> bool {
  │            - Type 2 inferred here
  │ ╭──────────────────────────────────────^
2 │ │     reg;
3 │ │         true
4 │ │ }
  │ ╰─^ Found 1 stages in this pipeline
  │  
  = note: Expected: 1
               Got: 2
