spade-tests/src/snapshots/spade_tests__hir_lowering__tests__incorrect_stage_count_single.snap
---
source: spade-tests/src/hir_lowering.rs
---
pipeline(1) pipe(clk: clock) -> bool {
        true
}


error: Pipeline depth mismatch. Expected 1 got 0
  ┌─ testinput:1:38
  │  
1 │   pipeline(1) pipe(clk: clock) -> bool {
  │            - Type 1 inferred here
  │ ╭──────────────────────────────────────^
2 │ │         true
3 │ │ }
  │ ╰─^ Found 0 stages in this pipeline
  │  
  = note: Expected: 0
               Got: 1
