spade-tests/src/snapshots/spade_tests__hir_lowering__tests__instantiating_enum_as_entity_gives_decent_error.snap
---
source: spade-tests/src/hir_lowering.rs
---
enum X {
    A
}

entity x() -> X {
    inst X::A()
}


error: Unexpected `inst` for function call
  ┌─ testinput:6:5
  │
2 │     A
  │     - A is defined as a function here
  ·
6 │     inst X::A()
  │     ^^^^ ---- Because A is a function
  │     │     
  │     Unexpected `inst`
  │
  = Consider removing the `inst`
  │
6 │     inst X::A()
  │     ----
