spade-tests/src/snapshots/spade_tests__hir_lowering__tests__instantiating_extern_generic_which_is_non_intrinsic_is_error.snap
---
source: spade-tests/src/hir_lowering.rs
---
extern fn a<T>() -> T;

fn main() -> int<32> {
    a()
}


error: Generic `extern`s can only be instantiated with number or string parameters
  ┌─ testinput:4:5
  │
1 │ extern fn a<T>() -> T;
  │ ---------------------- Because this generic `extern` has a type parameter
  ·
4 │     a()
  │     ^^^ Invalid instance
  │
  = Remove this parameter
  │
1 │ extern fn a<T>() -> T;
  │             -
