spade-tests/src/snapshots/spade_tests__hir_lowering__tests__instantiating_struct_as_entity_gives_decent_error.snap
---
source: spade-tests/src/hir_lowering.rs
---
struct X {
    a: bool
}

entity x() -> X {
    inst X(true)
}


error: Unexpected `inst` for function call
  ┌─ testinput:6:5
  │
1 │ struct X {
  │        - X is defined as a function here
  ·
6 │     inst X(true)
  │     ^^^^ - Because X is a function
  │     │     
  │     Unexpected `inst`
  │
  = Consider removing the `inst`
  │
6 │     inst X(true)
  │     ----
